--- a/notebooks/pandas_helpers.ipynb
+++ b/notebooks/pandas_helpers.ipynb
@@ -115,7 +115,8 @@
     {
      "data": {
       "text/plain": [
-       "{'avg(sepal_length)': 5.843333333333335, 'avg(sepal_width)': 3.057333333333334}"
+       "{'avg(sepal_length)': np.float64(5.843333333333335),\n",
+       " 'avg(sepal_width)': np.float64(3.057333333333334)}"
       ]
      },
      "execution_count": 5,
@@ -130,31 +131,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "fbc5e3e2-7ae4-4aee-891a-ad992174c17b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'sepal_length': 5.1,\n",
-       " 'sepal_width': 3.5,\n",
-       " 'petal_length': 1.4,\n",
-       " 'petal_width': 0.2,\n",
-       " 'species': 'setosa'}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "iris.prql('take 1').asdict()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
    "id": "85e7d3d0-110d-4b4d-9eb9-a5fa465d34b3",
    "metadata": {},
    "outputs": [
@@ -189,11 +165,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>versicolor</td>\n",
+       "      <td>virginica</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>virginica</td>\n",
+       "      <td>versicolor</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -202,11 +178,11 @@
       "text/plain": [
        "      species\n",
        "0      setosa\n",
-       "1  versicolor\n",
-       "2   virginica"
+       "1   virginica\n",
+       "2  versicolor"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,17 +194,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "2b3ee1b1-cbe8-446a-a6c3-895c79245dbf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['setosa', 'versicolor', 'virginica']"
+       "['setosa', 'virginica', 'versicolor']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "072cfc57-a82d-4fac-9714-e5ae91f6b283",
    "metadata": {},
    "outputs": [
@@ -271,18 +247,18 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>virginica</td>\n",
+       "      <td>6.588</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
        "      <td>setosa</td>\n",
        "      <td>5.006</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>2</th>\n",
        "      <td>versicolor</td>\n",
        "      <td>5.936</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>virginica</td>\n",
-       "      <td>6.588</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -290,12 +266,12 @@
       ],
       "text/plain": [
        "      species    val\n",
-       "0      setosa  5.006\n",
-       "1  versicolor  5.936\n",
-       "2   virginica  6.588"
+       "0   virginica  6.588\n",
+       "1      setosa  5.006\n",
+       "2  versicolor  5.936"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,19 +283,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "040a0f0b-a0a6-407f-bcb5-5c70cd6729c4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'setosa': 5.005999999999999,\n",
-       " 'versicolor': 5.936,\n",
-       " 'virginica': 6.587999999999998}"
+       "{'virginica': 6.587999999999998,\n",
+       " 'setosa': 5.005999999999999,\n",
+       " 'versicolor': 5.936}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
