--- a/notebooks/pandas_helpers.ipynb
+++ b/notebooks/pandas_helpers.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.4.0\n"
+      "0.5.0\n"
      ]
     }
    ],
@@ -165,11 +165,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>virginica</td>\n",
+       "      <td>versicolor</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>versicolor</td>\n",
+       "      <td>virginica</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -178,8 +178,8 @@
       "text/plain": [
        "      species\n",
        "0      setosa\n",
-       "1   virginica\n",
-       "2  versicolor"
+       "1  versicolor\n",
+       "2   virginica"
       ]
      },
      "execution_count": 6,
@@ -201,7 +201,7 @@
     {
      "data": {
       "text/plain": [
-       "['setosa', 'virginica', 'versicolor']"
+       "['setosa', 'versicolor', 'virginica']"
       ]
      },
      "execution_count": 7,
@@ -252,13 +252,13 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>setosa</td>\n",
-       "      <td>5.006</td>\n",
+       "      <td>versicolor</td>\n",
+       "      <td>5.936</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>versicolor</td>\n",
-       "      <td>5.936</td>\n",
+       "      <td>setosa</td>\n",
+       "      <td>5.006</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -267,8 +267,8 @@
       "text/plain": [
        "      species    val\n",
        "0   virginica  6.588\n",
-       "1      setosa  5.006\n",
-       "2  versicolor  5.936"
+       "1  versicolor  5.936\n",
+       "2      setosa  5.006"
       ]
      },
      "execution_count": 8,
@@ -291,8 +291,8 @@
      "data": {
       "text/plain": [
        "{'virginica': 6.587999999999998,\n",
-       " 'setosa': 5.005999999999999,\n",
-       " 'versicolor': 5.936}"
+       " 'versicolor': 5.936,\n",
+       " 'setosa': 5.005999999999999}"
       ]
      },
      "execution_count": 9,
