--- a/notebooks/examples.ipynb
+++ b/notebooks/examples.ipynb
@@ -23,7 +23,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.4.0\n"
+      "0.5.0\n"
      ]
     }
    ],
@@ -747,7 +747,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>virginica</td>\n",
+       "      <td>setosa</td>\n",
        "      <td>50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -757,7 +757,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>setosa</td>\n",
+       "      <td>virginica</td>\n",
        "      <td>50</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -766,9 +766,9 @@
       ],
       "text/plain": [
        "      species  num\n",
-       "0   virginica   50\n",
+       "0      setosa   50\n",
        "1  versicolor   50\n",
-       "2      setosa   50"
+       "2   virginica   50"
       ]
      },
      "execution_count": 7,
@@ -918,12 +918,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>versicolor</td>\n",
+       "      <td>setosa</td>\n",
        "      <td>50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>setosa</td>\n",
+       "      <td>versicolor</td>\n",
        "      <td>50</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -933,8 +933,8 @@
       "text/plain": [
        "      species  num\n",
        "0   virginica   50\n",
-       "1  versicolor   50\n",
-       "2      setosa   50"
+       "1      setosa   50\n",
+       "2  versicolor   50"
       ]
      },
      "execution_count": 9,
@@ -999,18 +999,18 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>virginica</td>\n",
-       "      <td>2.026</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
        "      <td>setosa</td>\n",
        "      <td>0.246</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>1</th>\n",
        "      <td>versicolor</td>\n",
        "      <td>1.326</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>virginica</td>\n",
+       "      <td>2.026</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1018,9 +1018,9 @@
       ],
       "text/plain": [
        "      species  avg_petal_width\n",
-       "0   virginica            2.026\n",
-       "1      setosa            0.246\n",
-       "2  versicolor            1.326"
+       "0      setosa            0.246\n",
+       "1  versicolor            1.326\n",
+       "2   virginica            2.026"
       ]
      },
      "execution_count": 10,
@@ -1726,7 +1726,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>setosa</td>\n",
+       "      <td>virginica</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1734,7 +1734,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>virginica</td>\n",
+       "      <td>setosa</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1742,9 +1742,9 @@
       ],
       "text/plain": [
        "      species\n",
-       "0      setosa\n",
+       "0   virginica\n",
        "1  versicolor\n",
-       "2   virginica"
+       "2      setosa"
       ]
      },
      "execution_count": 15,
@@ -1765,7 +1765,7 @@
     {
      "data": {
       "text/plain": [
-       "['setosa', 'versicolor', 'virginica']"
+       "['virginica', 'versicolor', 'setosa']"
       ]
      },
      "execution_count": 16,
@@ -1786,7 +1786,7 @@
     {
      "data": {
       "text/plain": [
-       "['virginica', 'versicolor', 'setosa']"
+       "['setosa', 'virginica', 'versicolor']"
       ]
      },
      "execution_count": 17,
