cleaner notebook example

--- a/arrow_warning.ipynb
+++ b/arrow_warning.ipynb
@@ -7,16 +7,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import duckdb"
+    "import duckdb\n",
+    "import pandas as pd\n",
+    "pd.set_option('future.infer_string', True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0fb237dd-c473-465b-8435-33b7602b48b5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -25,11 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "pd.set_option('future.infer_string', True)\n",
-    "\n",
-    "df = pd.DataFrame({'a': ['a', 'b', 'c']})"
+    "df = pd.DataFrame({'col1': ['a', 'b', 'c']})"
    ]
   },
   {
@@ -50,7 +40,7 @@
     }
    ],
    "source": [
-    "df['a'].__class__"
+    "df['col1'].__class__"
    ]
   },
   {
@@ -73,7 +63,7 @@
     }
    ],
    "source": [
-    "df['a'].array"
+    "df['col1'].array"
    ]
   },
   {
@@ -94,7 +84,7 @@
     }
    ],
    "source": [
-    "df.a.dtype"
+    "df.col1.dtype"
    ]
   },
   {
@@ -102,25 +92,42 @@
    "execution_count": 6,
    "id": "335580c8-6b65-44f4-b1b2-4e0ee09a021e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/pz/1nqrv9792935dly77nsj_knc0000gn/T/ipykernel_6014/2409810015.py:6: FutureWarning: ArrowStringArrayNumpySemantics._data is a deprecated and will be removed in a future version, use ._pa_array instead\n",
+      "  con.register('df', df)\n",
+      "/var/folders/pz/1nqrv9792935dly77nsj_knc0000gn/T/ipykernel_6014/2409810015.py:6: FutureWarning: ArrowStringArrayNumpySemantics._data is a deprecated and will be removed in a future version, use ._pa_array instead\n",
+      "  con.register('df', df)\n",
+      "/var/folders/pz/1nqrv9792935dly77nsj_knc0000gn/T/ipykernel_6014/2409810015.py:6: FutureWarning: ArrowStringArrayNumpySemantics._data is a deprecated and will be removed in a future version, use ._pa_array instead\n",
+      "  con.register('df', df)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<duckdb.duckdb.DuckDBPyConnection at 0x10e9b2130>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "config = {'enable_external_access': False}\n",
-    "con = duckdb.connect(database=':memory:', config=config)"
+    "con = duckdb.connect(\n",
+    "    database = ':memory:',\n",
+    "    config = {'enable_external_access': False}\n",
+    ")\n",
+    "\n",
+    "con.register('df', df)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4745f99a-d1a3-411f-9de7-d52a50614590",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dfs = {'df': df}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
    "id": "736625fe-e586-4fb4-96d7-990a886dc322",
    "metadata": {},
    "outputs": [
@@ -128,23 +135,67 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/pz/1nqrv9792935dly77nsj_knc0000gn/T/ipykernel_4736/2870230371.py:2: FutureWarning: ArrowStringArrayNumpySemantics._data is a deprecated and will be removed in a future version, use ._pa_array instead\n",
-      "  con.register(tbl_name, df)\n",
-      "/var/folders/pz/1nqrv9792935dly77nsj_knc0000gn/T/ipykernel_4736/2870230371.py:2: FutureWarning: ArrowStringArrayNumpySemantics._data is a deprecated and will be removed in a future version, use ._pa_array instead\n",
-      "  con.register(tbl_name, df)\n",
-      "/var/folders/pz/1nqrv9792935dly77nsj_knc0000gn/T/ipykernel_4736/2870230371.py:2: FutureWarning: ArrowStringArrayNumpySemantics._data is a deprecated and will be removed in a future version, use ._pa_array instead\n",
-      "  con.register(tbl_name, df)\n",
-      "/var/folders/pz/1nqrv9792935dly77nsj_knc0000gn/T/ipykernel_4736/2870230371.py:5: FutureWarning: ArrowStringArrayNumpySemantics._data is a deprecated and will be removed in a future version, use ._pa_array instead\n",
+      "/var/folders/pz/1nqrv9792935dly77nsj_knc0000gn/T/ipykernel_6014/3518110904.py:2: FutureWarning: ArrowStringArrayNumpySemantics._data is a deprecated and will be removed in a future version, use ._pa_array instead\n",
       "  out = con.execute(s).df()\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>col1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>a</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>b</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>c</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  col1\n",
+       "0    a\n",
+       "1    b\n",
+       "2    c"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "for tbl_name, df in dfs.items():\n",
-    "    con.register(tbl_name, df)\n",
-    "\n",
-    "s = \"select * from df\"\n",
-    "out = con.execute(s).df()"
+    "s = 'select * from df'\n",
+    "out = con.execute(s).df()\n",
+    "out"
    ]
   },
   {
