idea makes sense

--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -3,54 +3,17 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ef8a8ee2-251a-4838-821c-04b2e41bda73",
+   "id": "3a0fbd76-36f6-4e09-879e-23c3f10ba83f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pdx\n",
-    "\n",
-    "import duckdb\n",
-    "import pyarrow as pa\n",
-    "\n",
-    "\n",
-    "class Database:\n",
-    "    def __init__(self, **dfs):\n",
-    "        con = duckdb.connect(\n",
-    "            database = ':memory:',\n",
-    "            config = {'enable_external_access': False},\n",
-    "        )\n",
-    "    \n",
-    "        for tbl_name, df in dfs.items():\n",
-    "            df = pa.Table.from_pandas(df)\n",
-    "            con.register(tbl_name, df)\n",
-    "\n",
-    "        self._con = con\n",
-    "\n",
-    "    def __repr__(self):\n",
-    "        return 'pdx.Database:'\n",
-    "        \"\"\"\n",
-    "        df = db._con.execute('SHOW ALL TABLES').df()\n",
-    "        for row in df.iterrows():\n",
-    "            row\n",
-    "        row[1]\n",
-    "\n",
-    "        row[1]['name']\n",
-    "\n",
-    "        row[1]['column_names']\n",
-    "\n",
-    "        probably also want length\n",
-    "        \"\"\"\n",
-    "\n",
-    "    def sql(self, s):\n",
-    "        # s = _get_if_file(s)\n",
-    "        out = self._con.execute(s).df()\n",
-    "        return out"
+    "import pdx"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "16083f76-748a-4708-b11a-e9ec8aef6bac",
+   "id": "7a154236-50b5-402c-8ead-43e5d3c244b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,27 +23,39 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8df80e21-15ae-4882-96e6-a420094778fe",
+   "id": "a2328f5b-030c-456c-958b-8118858f4f2b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "db = Database(iris=iris)"
+    "db = pdx.Database(iris=iris)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fa4f37b2-9fb6-47dd-9aab-787a5f333a84",
+   "id": "0faf9a45-6133-4924-8fdb-04efb42db887",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pdx.Database:\n",
+       "    iris: 150 x ['sepal_length', 'sepal_width', 'petal_length', 'petal_width', 'species']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df = db._con.execute('SHOW ALL TABLES').df()"
+    "db"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "76f273e9-4627-43fd-a504-226c1046e476",
+   "id": "e846828c-e3da-41dd-801c-a6badfa66085",
    "metadata": {},
    "outputs": [
     {
@@ -235,89 +210,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "780a46d0-2109-4ccb-876b-419a76f93c2c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for row in df.iterrows():\n",
-    "    row"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "ad0c99b2-445b-4070-9d28-19afc6775a7d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "database                                                     temp\n",
-       "schema                                                       main\n",
-       "name                                                         iris\n",
-       "column_names    [sepal_length, sepal_width, petal_length, peta...\n",
-       "column_types            [DOUBLE, DOUBLE, DOUBLE, DOUBLE, VARCHAR]\n",
-       "temporary                                                    True\n",
-       "Name: 0, dtype: object"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "row[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "dd25250d-5290-46d2-bf4d-c7ea2af2c5e0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'iris'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "row[1]['name']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "dc6170f2-d48f-4afd-a4f9-84b629d32875",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['sepal_length', 'sepal_width', 'petal_length', 'petal_width',\n",
-       "       'species'], dtype=object)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "row[1]['column_names']"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "595bd37b-77ba-4044-bbd5-b0007038eed2",
+   "id": "fd99ee6c-139a-4bb8-9e08-c925485e5ba6",
    "metadata": {},
    "outputs": [],
    "source": []
